--- a/racknerd.html
+++ b/racknerd.html
@@ -64,6 +64,7 @@
 
     <h2>官网地址</h2>
     <p>高性价比海外VPS: <a href="https://my.racknerd.com/aff.php?aff=12151" class="button" target="_blank">点击跳转官网</a></p>
+    <p>电信联通建议选择洛杉矶DC02</p>
 
     <h2>促销优惠VPS</h2>
 
@@ -134,7 +135,7 @@
             <td>25G</td>
             <td>4T/月</td>
             <td>1Gbps</td>
-            <td>$16.88/年</td>
+            <td>$16.88/年[有DC02 IP]</td>
             <td><a href="https://my.racknerd.com/aff.php?aff=12151&pid=839" class="button" target="_blank">点击购买</a></td>
         </tr>
         <tr>
@@ -143,7 +144,7 @@
             <td>38G</td>
             <td>6T/月</td>
             <td>1Gbps</td>
-            <td>$23.88/年</td>
+            <td>$23.88/年[有DC02 IP]</td>
             <td><a href="https://my.racknerd.com/aff.php?aff=12151&pid=840" class="button" target="_blank">点击购买</a></td>
         </tr>
     </table>
@@ -175,7 +176,7 @@
             <td>35G</td>
             <td>2.5T/月</td>
             <td>1Gbps</td>
-            <td>$17.38/年</td>
+            <td>$17.38/年[有DC02 IP]</td>
             <td><a href="https://my.racknerd.com/aff.php?aff=12151&pid=827" class="button" target="_blank">点击购买</a></td>
         </tr>
         <tr>
@@ -184,7 +185,7 @@
             <td>45G</td>
             <td>5T/月</td>
             <td>1Gbps</td>
-            <td>$27.98/年</td>
+            <td>$27.98/年[有DC02 IP]</td>
             <td><a href="https://my.racknerd.com/aff.php?aff=12151&pid=828" class="button" target="_blank">点击购买</a></td>
         </tr>
         <tr>
@@ -193,7 +194,7 @@
             <td>60G</td>
             <td>8T/月</td>
             <td>1Gbps</td>
-            <td>$37.38/年</td>
+            <td>$37.38/年[有DC02 IP]</td>
             <td><a href="https://my.racknerd.com/aff.php?aff=12151&pid=829" class="button" target="_blank">点击购买</a></td>
         </tr>
     </table>
@@ -224,7 +225,7 @@
             <td>30G</td>
             <td>2.5T/月</td>
             <td>1Gbps</td>
-            <td>$16.98/年</td>
+            <td>$16.98/年[有DC02 IP]</td>
             <td><a href="https://my.racknerd.com/aff.php?aff=12151&pid=793" class="button" target="_blank">点击购买</a></td>
         </tr>
         <tr>
@@ -233,7 +234,7 @@
             <td>50G</td>
             <td>5T/月</td>
             <td>1Gbps</td>
-            <td>$25.49/年</td>
+            <td>$25.49/年[有DC02 IP]</td>
             <td><a href="https://my.racknerd.com/aff.php?aff=12151&pid=794" class="button" target="_blank">点击购买</a></td>
         </tr>
         <tr>
@@ -242,7 +243,7 @@
             <td>80G</td>
             <td>8T/月</td>
             <td>1Gbps</td>
-            <td>$38.88/年</td>
+            <td>$38.88/年[有DC02 IP]</td>
             <td><a href="https://my.racknerd.com/aff.php?aff=12151&pid=795" class="button" target="_blank">点击购买</a></td>
         </tr>
     </table>
@@ -282,7 +283,7 @@
             <td>45G</td>
             <td>6T/月</td>
             <td>1Gbps</td>
-            <td>$24.88/年</td>
+            <td>$24.88/年[有DC02 IP]</td>
             <td><a href="https://my.racknerd.com/aff.php?aff=12151&pid=736" class="button" target="_blank">点击购买</a></td>
         </tr>
     </table>
@@ -313,7 +314,7 @@
             <td>30G</td>
             <td>3T/月</td>
             <td>1Gbps</td>
-            <td>$16.88/年</td>
+            <td>$16.88/年[有DC02 IP]</td>
             <td><a href="https://my.racknerd.com/aff.php?aff=12151&pid=696" class="button" target="_blank">点击购买</a></td>
         </tr>
         <tr>
@@ -322,7 +323,7 @@
             <td>60G</td>
             <td>7T/月</td>
             <td>1Gbps</td>
-            <td>$28.55/年</td>
+            <td>$28.55/年[有DC02 IP]</td>
             <td><a href="https://my.racknerd.com/aff.php?aff=12151&pid=697" class="button" target="_blank">点击购买</a></td>
         </tr>
         <tr>
@@ -331,7 +332,7 @@
             <td>80G</td>
             <td>10T/月</td>
             <td>1Gbps</td>
-            <td>$38.88/年</td>
+            <td>$38.88/年[有DC02 IP]</td>
             <td><a href="https://my.racknerd.com/aff.php?aff=12151&pid=698" class="button" target="_blank">点击购买</a></td>
         </tr>
     </table>
