--- a/racknerd.html
+++ b/racknerd.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>超值VPS主机 | 多种套餐，满足您的所有需求</title>
-    <link rel="icon" href="https://cdn.jsdelivr.net/gh/dqzboy/Blog-Image/BlogCourse/docker-proxy.png" type="image/png">
+    <link rel="icon" href="https://cdn.jsdelivr.net/gh/dqzboy/Blog-Image/BlogCourse/racknerd.png" type="image/png">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
@@ -273,7 +273,7 @@
 <body>
     <div class="container">
         <header class="header">
-            <img src="https://github.com/dqzboy/Docker-Proxy/assets/42825450/c187d66f-152e-4172-8268-e54bd77d48bb" alt="Logo" class="logo">
+            <img src="https://cdn.jsdelivr.net/gh/dqzboy/Blog-Image/BlogCourse/racknerd.png" alt="Logo" class="logo">
             <h1>超越极限的VPS主机体验</h1>
             <p>释放您的数字潜力，享受无与伦比的速度与性能，现在就以难以置信的价格启程！</p>
         </header>
