--- a/racknerd.html
+++ b/racknerd.html
@@ -305,6 +305,76 @@
         </section>
 
         <section class="section">
+            <h2>2024 双11 VPS 促销优惠活动</h2>
+            <p>多个美国机房可选，限时特惠！含DC02</p>
+            <div class="plans-grid">
+                <div class="plan-card">
+                    <div class="plan-name">入门套餐</div>
+                    <div class="plan-price">$11.11/年</div>
+                    <div class="renewal-price">续费同价</div>
+                    <ul class="plan-features">
+                        <li><strong>1核心</strong> CPU</li>
+                        <li><strong>1GB</strong> 内存</li>
+                        <li><strong>14GB</strong> SSD存储</li>
+                        <li><strong>2TB/月</strong> 流量</li>
+                        <li><strong>1Gbps</strong> 端口</li>
+                    </ul>
+                    <div class="button-container">
+                        <a href="https://my.racknerd.com/aff.php?aff=12151&pid=875" class="button" target="_blank">立即购买</a>
+                    </div>
+                </div>
+                <div class="plan-card">
+                    <div class="plan-name">基础套餐</div>
+                    <div class="plan-price">$17.98/年</div>
+                    <div class="renewal-price">续费同价</div>
+                    <ul class="plan-features">
+                        <li><strong>1核心</strong> CPU</li>
+                        <li><strong>2GB</strong> 内存</li>
+                        <li><strong>25GB</strong> SSD存储</li>
+                        <li><strong>3TB/月</strong> 流量</li>
+                        <li><strong>1Gbps</strong> 端口</li>
+                    </ul>
+                    <div class="button-container">
+                        <a href="https://my.racknerd.com/aff.php?aff=12151&pid=876" class="button" target="_blank">立即购买</a>
+                        <span class="dc02-badge">有DC02 IP</span>
+                    </div>
+                </div>
+                <div class="plan-card">
+                    <div class="plan-name">进阶套餐</div>
+                    <div class="plan-price">$25.98/年</div>
+                    <div class="renewal-price">续费同价</div>
+                    <ul class="plan-features">
+                        <li><strong>2核心</strong> CPU</li>
+                        <li><strong>3GB</strong> 内存</li>
+                        <li><strong>40GB</strong> SSD存储</li>
+                        <li><strong>5TB/月</strong> 流量</li>
+                        <li><strong>1Gbps</strong> 端口</li>
+                    </ul>
+                    <div class="button-container">
+                        <a href="https://my.racknerd.com/aff.php?aff=12151&pid=877" class="button" target="_blank">立即购买</a>
+                        <span class="dc02-badge">有DC02 IP</span>
+                    </div>
+                </div>
+                <div class="plan-card">
+                    <div class="plan-name">进阶套餐</div>
+                    <div class="plan-price">$36.88/年</div>
+                    <div class="renewal-price">续费同价</div>
+                    <ul class="plan-features">
+                        <li><strong>3核心</strong> CPU</li>
+                        <li><strong>4GB</strong> 内存</li>
+                        <li><strong>50GB</strong> SSD存储</li>
+                        <li><strong>6TB/月</strong> 流量</li>
+                        <li><strong>1Gbps</strong> 端口</li>
+                    </ul>
+                    <div class="button-container">
+                        <a href="https://my.racknerd.com/aff.php?aff=12151&pid=878" class="button" target="_blank">立即购买</a>
+                        <span class="dc02-badge">有DC02 IP</span>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="section">
             <h2>2024 端午节 VPS 促销优惠活动</h2>
             <p>多个美国机房可选，限时特惠！</p>
             <div class="plans-grid">
