--- a/racknerd.html
+++ b/racknerd.html
@@ -305,69 +305,85 @@
         </section>
 
         <section class="section">
-            <h2>2024 双11 VPS 促销优惠活动</h2>
-            <p>多个美国机房可选，限时特惠！含DC02</p>
+            <h2>2024 黑色星期五 VPS 促销优惠活动</h2>
+            <p>多个机房可选，限时特惠！含DC02</p>
             <div class="plans-grid">
                 <div class="plan-card">
                     <div class="plan-name">入门套餐</div>
-                    <div class="plan-price">$11.11/年</div>
+                    <div class="plan-price">$10.99/年</div>
                     <div class="renewal-price">续费同价</div>
                     <ul class="plan-features">
                         <li><strong>1核心</strong> CPU</li>
                         <li><strong>1GB</strong> 内存</li>
-                        <li><strong>14GB</strong> SSD存储</li>
-                        <li><strong>2TB/月</strong> 流量</li>
+                        <li><strong>20GB</strong> SSD存储</li>
+                        <li><strong>1.5TB/月</strong> 流量</li>
                         <li><strong>1Gbps</strong> 端口</li>
                     </ul>
                     <div class="button-container">
-                        <a href="https://my.racknerd.com/aff.php?aff=12151&pid=875" class="button" target="_blank">立即购买</a>
+                        <a href="https://my.racknerd.com/aff.php?aff=12151&pid=879" class="button" target="_blank">立即购买</a>
                     </div>
                 </div>
                 <div class="plan-card">
                     <div class="plan-name">基础套餐</div>
-                    <div class="plan-price">$17.98/年</div>
+                    <div class="plan-price">$18.93/年</div>
                     <div class="renewal-price">续费同价</div>
                     <ul class="plan-features">
-                        <li><strong>1核心</strong> CPU</li>
-                        <li><strong>2GB</strong> 内存</li>
-                        <li><strong>25GB</strong> SSD存储</li>
+                        <li><strong>2核心</strong> CPU</li>
+                        <li><strong>2.5GB</strong> 内存</li>
+                        <li><strong>40GB</strong> SSD存储</li>
                         <li><strong>3TB/月</strong> 流量</li>
                         <li><strong>1Gbps</strong> 端口</li>
                     </ul>
                     <div class="button-container">
-                        <a href="https://my.racknerd.com/aff.php?aff=12151&pid=876" class="button" target="_blank">立即购买</a>
+                        <a href="https://my.racknerd.com/aff.php?aff=12151&pid=880" class="button" target="_blank">立即购买</a>
                         <span class="dc02-badge">有DC02 IP</span>
                     </div>
                 </div>
                 <div class="plan-card">
                     <div class="plan-name">进阶套餐</div>
-                    <div class="plan-price">$25.98/年</div>
+                    <div class="plan-price">$27.89/年</div>
                     <div class="renewal-price">续费同价</div>
                     <ul class="plan-features">
                         <li><strong>2核心</strong> CPU</li>
                         <li><strong>3GB</strong> 内存</li>
-                        <li><strong>40GB</strong> SSD存储</li>
-                        <li><strong>5TB/月</strong> 流量</li>
+                        <li><strong>60GB</strong> SSD存储</li>
+                        <li><strong>5.5TB/月</strong> 流量</li>
                         <li><strong>1Gbps</strong> 端口</li>
                     </ul>
                     <div class="button-container">
-                        <a href="https://my.racknerd.com/aff.php?aff=12151&pid=877" class="button" target="_blank">立即购买</a>
+                        <a href="https://my.racknerd.com/aff.php?aff=12151&pid=881" class="button" target="_blank">立即购买</a>
                         <span class="dc02-badge">有DC02 IP</span>
                     </div>
                 </div>
                 <div class="plan-card">
                     <div class="plan-name">进阶套餐</div>
-                    <div class="plan-price">$36.88/年</div>
+                    <div class="plan-price">$39.88/年</div>
                     <div class="renewal-price">续费同价</div>
                     <ul class="plan-features">
                         <li><strong>3核心</strong> CPU</li>
-                        <li><strong>4GB</strong> 内存</li>
-                        <li><strong>50GB</strong> SSD存储</li>
-                        <li><strong>6TB/月</strong> 流量</li>
+                        <li><strong>4.5GB</strong> 内存</li>
+                        <li><strong>100GB</strong> SSD存储</li>
+                        <li><strong>8.5TB/月</strong> 流量</li>
                         <li><strong>1Gbps</strong> 端口</li>
                     </ul>
                     <div class="button-container">
-                        <a href="https://my.racknerd.com/aff.php?aff=12151&pid=878" class="button" target="_blank">立即购买</a>
+                        <a href="https://my.racknerd.com/aff.php?aff=12151&pid=882" class="button" target="_blank">立即购买</a>
+                        <span class="dc02-badge">有DC02 IP</span>
+                    </div>
+                </div>
+                <div class="plan-card">
+                    <div class="plan-name">进阶套餐</div>
+                    <div class="plan-price">$55.93/年</div>
+                    <div class="renewal-price">续费同价</div>
+                    <ul class="plan-features">
+                        <li><strong>4核心</strong> CPU</li>
+                        <li><strong>5GB</strong> 内存</li>
+                        <li><strong>130GB</strong> SSD存储</li>
+                        <li><strong>12TB/月</strong> 流量</li>
+                        <li><strong>1Gbps</strong> 端口</li>
+                    </ul>
+                    <div class="button-container">
+                        <a href="https://my.racknerd.com/aff.php?aff=12151&pid=883" class="button" target="_blank">立即购买</a>
                         <span class="dc02-badge">有DC02 IP</span>
                     </div>
                 </div>
