--- a/index.html
+++ b/index.html
@@ -540,9 +540,9 @@
                 { text: '关于', link: 'https://github.com/dqzboy/Docker-Proxy' }
             ],
             adImages: [
-                { url: 'https://cdn.jsdelivr.net/gh/dqzboy/Blog-Image/BlogCourse/reacknerd-ad.png', alt: '广告1', link: 'https://github.com/dqzboy/Docker-Proxy/blob/main/Ad/README.md' },
-                { url: 'https://cdn.jsdelivr.net/gh/dqzboy/Blog-Image/BlogCourse/racknerd_vps.png', alt: '广告2', link: 'https://my.racknerd.com/aff.php?aff=12151' },
-                { url: 'https://cdn.jsdelivr.net/gh/dqzboy/Blog-Image/BlogCourse/docker-proxy-vip.png', alt: '广告3', link: 'https://www.dqzboy.com/17834.html' }
+                { url: 'https://cdn.jsdelivr.net/gh/dqzboy/Blog-Image/BlogCourse/reacknerd-ad.png', alt: '广告1', link: 'https://dqzboy.github.io/proxyui/racknerd' },
+                { url: 'https://cdn.jsdelivr.net/gh/dqzboy/Blog-Image/BlogCourse/racknerd_vps.png', alt: '广告2', link: 'https://dqzboy.github.io/proxyui/racknerd' },
+                { url: 'https://github.com/user-attachments/assets/75d0e262-1950-4679-8f99-d132522fc80a', alt: '广告3', link: 'https://github.com/dqzboy/Docker-Proxy' }
             ]
         };
 
