--- a/zanzhu.html
+++ b/zanzhu.html
@@ -319,7 +319,7 @@
         </ul>
         <h3>申请联系方式：</h3>
         <div class="contact-info">
-            <a href="https://t.me/dqz_boy" class="learn-more" target="_blank">点击咨询</a>
+            <a href="https://t.me/WiseAidBot" class="learn-more" target="_blank">点击咨询</a>
         </div>
     </div>
 </main>
