--- a/racknerd.html
+++ b/racknerd.html
@@ -305,6 +305,89 @@
         </section>
 
         <section class="section">
+            <h2>RackNerd 2025 新年促销活动</h2>
+            <p>多个机房可选，限时特惠！</p>
+            <div class="plans-grid">
+                <div class="plan-card">
+                    <div class="plan-name">入门套餐</div>
+                    <div class="plan-price">$11.29/年</div>
+                    <div class="renewal-price">续费同价</div>
+                    <ul class="plan-features">
+                        <li><strong>1核心</strong> CPU</li>
+                        <li><strong>1GB</strong> 内存</li>
+                        <li><strong>24GB</strong> SSD存储</li>
+                        <li><strong>2TB/月</strong> 流量</li>
+                        <li><strong>1Gbps</strong> 端口</li>
+                    </ul>
+                    <div class="button-container">
+                        <a href="https://my.racknerd.com/aff.php?aff=12151&pid=903" class="button" target="_blank">立即购买</a>
+                    </div>
+                </div>
+                <div class="plan-card">
+                    <div class="plan-name">基础套餐</div>
+                    <div class="plan-price">$18.29/年</div>
+                    <div class="renewal-price">续费同价</div>
+                    <ul class="plan-features">
+                        <li><strong>1核心</strong> CPU</li>
+                        <li><strong>2GB</strong> 内存</li>
+                        <li><strong>40GB</strong> SSD存储</li>
+                        <li><strong>3.5TB/月</strong> 流量</li>
+                        <li><strong>1Gbps</strong> 端口</li>
+                    </ul>
+                    <div class="button-container">
+                        <a href="https://my.racknerd.com/aff.php?aff=12151&pid=904" class="button" target="_blank">立即购买</a>
+                    </div>
+                </div>
+                <div class="plan-card">
+                    <div class="plan-name">进阶套餐</div>
+                    <div class="plan-price">$32.49/年</div>
+                    <div class="renewal-price">续费同价</div>
+                    <ul class="plan-features">
+                        <li><strong>2核心</strong> CPU</li>
+                        <li><strong>3.5GB</strong> 内存</li>
+                        <li><strong>65GB</strong> SSD存储</li>
+                        <li><strong>7TB/月</strong> 流量</li>
+                        <li><strong>1Gbps</strong> 端口</li>
+                    </ul>
+                    <div class="button-container">
+                        <a href="https://my.racknerd.com/aff.php?aff=12151&pid=905" class="button" target="_blank">立即购买</a>
+                    </div>
+                </div>
+                <div class="plan-card">
+                    <div class="plan-name">进阶套餐</div>
+                    <div class="plan-price">$43.88/年</div>
+                    <div class="renewal-price">续费同价</div>
+                    <ul class="plan-features">
+                        <li><strong>3核心</strong> CPU</li>
+                        <li><strong>4GB</strong> 内存</li>
+                        <li><strong>105GB</strong> SSD存储</li>
+                        <li><strong>9TB/月</strong> 流量</li>
+                        <li><strong>1Gbps</strong> 端口</li>
+                    </ul>
+                    <div class="button-container">
+                        <a href="https://my.racknerd.com/aff.php?aff=12151&pid=906" class="button" target="_blank">立即购买</a>
+                    </div>
+                </div>
+                <div class="plan-card">
+                    <div class="plan-name">进阶套餐</div>
+                    <div class="plan-price">$59.99/年</div>
+                    <div class="renewal-price">续费同价</div>
+                    <ul class="plan-features">
+                        <li><strong>4核心</strong> CPU</li>
+                        <li><strong>6GB</strong> 内存</li>
+                        <li><strong>140GB</strong> SSD存储</li>
+                        <li><strong>12TB/月</strong> 流量</li>
+                        <li><strong>1Gbps</strong> 端口</li>
+                    </ul>
+                    <div class="button-container">
+                        <a href="https://my.racknerd.com/aff.php?aff=12151&pid=907" class="button" target="_blank">立即购买</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        
+        
+        <section class="section">
             <h2>2024 黑色星期五 VPS 促销优惠活动</h2>
             <p>多个机房可选，限时特惠！含DC02</p>
             <div class="plans-grid">
