--- a/index.html
+++ b/index.html
@@ -734,7 +734,7 @@
                 <img src="https://cdn.jsdelivr.net/gh/dqzboy/Blog-Image/BlogCourse/docker-proxy.png" alt="Logo" class="logo">
             </a>
             <nav class="nav-menu">
-                <a href="/">首页</a>
+                <a href="https://dqzboy.github.io/proxyui/">首页</a>
                 <a href="https://github.com/dqzboy/Docker-Proxy" target="_blank">GitHub</a>
                 <a href="https://github.com/dqzboy/dqzboy/blob/main/.github/FUNDING.md" target="_blank">支持</a>
                 <a href="https://dqzboy.github.io/proxyui/racknerd" target="_blank">推广</a>
