--- a/racknerd.html
+++ b/racknerd.html
@@ -30,7 +30,7 @@
             padding: 20px;
         }
 
-        .container {
+        。container {
             max-width: 1400px;
             margin: 0 auto;
         }
@@ -218,7 +218,7 @@
                 <li>建议购买至少 1GB 内存配置的 VPS，以获得更好的使用体验。</li>
                 <li>如果分到了被墙的 IP 可以在购买后 <strong>72 小时</strong> 内免费更换。</li>
                 <li>洛杉矶 (Los Angeles) DC-02 机房可免费提供多个 IPv6 地址。</li>
-                <li>部分套餐包含 <strong>DC02 IP</strong>，此机房网络质量优秀。</li>
+                <li>部分套餐包含 <strong>DC02 IP</strong>，<strong>DC03 IP</strong>，可以优先考虑此机房VPS。</li>
             </ul>
         </div>
     </div>
