--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Docker镜像加速服务</title>
     <link rel="icon" href="https://cdn.jsdelivr.net/gh/dqzboy/Blog-Image/BlogCourse/docker-proxy.png" type="image/png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="https://raw.githubusercontent.com/dqzboy/proxyui/refs/heads/main/style.css">
-    <script src="https://raw.githubusercontent.com/dqzboy/proxyui/refs/heads/main/nav-menu.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/dqzboy/proxyui@main/style.css">
+    <script src="https://cdn.jsdelivr.net/gh/dqzboy/proxyui@main/nav-menu.js"></script>
 </head>
 <body>
     <header class="header">
