--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="https://cdn.jsdelivr.net/gh/dqzboy/Blog-Image/BlogCourse/docker-proxy.png" type="image/png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/dqzboy/proxyui@main/style.css">
-    <script src="https://cdn.jsdelivr.net/gh/dqzboy/proxyui@main/nav-menu.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/dqzboy/proxyui@main/js/nav-menu.js"></script>
 </head>
 <body>
     <header class="header">
