--- a/racknerd.html
+++ b/racknerd.html
@@ -398,6 +398,55 @@
     <script>
         // VPS促销数据配置
         const promotionData = {
+            // 2025年6月促销活动
+            'promo_june_2025': {
+                title: '2025年最新促销优惠活动',
+                tag: '🎉 最新特惠',
+                icon: 'fas fa-gift',
+                plans: [
+                    {
+                        cpu: '1',
+                        ram: '1',
+                        storage: '20',
+                        bandwidth: '2',
+                        price: '10.96',
+                        pid: '912',
+                        hasDC03: false,
+                        hasDC02: false
+                    },
+                    {
+                        cpu: '2',
+                        ram: '2',
+                        storage: '30',
+                        bandwidth: '4',
+                        price: '17.66',
+                        pid: '913',
+                        hasDC03: false,
+                        hasDC02: false
+                    },
+                    {
+                        cpu: '3',
+                        ram: '3.5',
+                        storage: '60',
+                        bandwidth: '5',
+                        price: '29.89',
+                        pid: '914',
+                        hasDC02: false,
+                        hasDC03: false
+                    },
+                    {
+                        cpu: '4',
+                        ram: '5',
+                        storage: '100',
+                        bandwidth: '10',
+                        price: '54.99',
+                        pid: '915',
+                        hasDC02: false,
+                        hasDC03: false
+                    }
+                ]
+            },
+
             // 2025新年促销活动
             'promo_ny_2025': {
                 title: '2025 新年促销活动',
