--- a/CloudCone.html
+++ b/CloudCone.html
@@ -333,7 +333,7 @@
         </div>
 
         <div class="section">
-            <h2>🔥 2025年6月限量促销款 VPS</h2>
+            <h2>🔥 2025年最新限量促销款 VPS</h2>
             <div class="promo-badge">限时限量 · 随时缺货</div>
             
             <h3>标准 VPS</h3>
