--- a/zanzhu.html
+++ b/zanzhu.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>赞助合作</title>
+    <title>推广</title>
     <link rel="icon" href="https://cdn.jsdelivr.net/gh/dqzboy/Blog-Image/BlogCourse/docker-proxy.png" type="image/png">
     <style>
         :root {
@@ -22,7 +22,7 @@
             padding: 0;
             background-color: var(--background-color);
         }
-        .container {
+        。container {
             max-width: 1200px;
             margin: 0 auto;
             padding: 20px;
@@ -256,7 +256,7 @@
 <body>
     <header>
         <div class="container">
-            <h1>Docker-Proxy 赞助商家</h1>
+            <h1>Docker-Proxy 推广平台</h1>
         </div>
     </header>
 
@@ -283,7 +283,7 @@
             <div class="provider-card">
                 <img src="https://cdn.jsdelivr.net/gh/dqzboy/Blog-Image/BlogCourse/zanzhu.png" alt="zanzhu Ads">
                 <div class="provider-info">
-                    <h2 class="provider-name">赞助平台</h2>
+                    <h2 class="provider-name">推广平台</h2>
                     <p class="provider-description">全球领先的平台，提供多样化的解决方案，助您触达目标受众。</p>
                     <div class="provider-tags">
                         <span class="tag">标签</span>
@@ -296,7 +296,7 @@
             <div class="provider-card">
                 <img src="https://cdn.jsdelivr.net/gh/dqzboy/Blog-Image/BlogCourse/zanzhu.png" alt="zanzhu Ads">
                 <div class="provider-info">
-                    <h2 class="provider-name">赞助平台</h2>
+                    <h2 class="provider-name">推广平台</h2>
                     <p class="provider-description">全球领先的平台，提供多样化的解决方案，助您触达目标受众。</p>
                     <div class="provider-tags">
                         <span class="tag">标签</span>
@@ -309,7 +309,7 @@
         </div>
 
     <div class="apply-section">
-        <h2>申请赞助</h2>
+        <h2>申请推广(赞助)</h2>
         <h3>申请要求：</h3>
         <ul>
             <li>拥有合法的营业执照和相关资质</li>
