--- a/zanzhu.html
+++ b/zanzhu.html
@@ -369,7 +369,7 @@
                 opacity: 0;
                 transform: translateY(30px);
             }
-            to {
+            到 {
                 opacity: 1;
                 transform: translateY(0);
             }
@@ -387,7 +387,7 @@
 <body>
     <header>
         <div class="container">
-            <h1><i class="fas fa-rocket"></i> Docker-Proxy 推广平台</h1>
+            <h1><i class="fas fa-rocket"></i> Docker-Proxy 项目广告合作</h1>
             <p>连接优质服务提供商，助力您的业务发展</p>
         </div>
     </header>
