--- a/zanzhu.html
+++ b/zanzhu.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>推广</title>
+    <title>Docker-Proxy 项目广告合作</title>
     <link rel="icon" href="https://cdn.jsdelivr.net/gh/dqzboy/Blog-Image/BlogCourse/docker-proxy.png" type="image/png">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
@@ -24,7 +24,7 @@
             --shadow-xl: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
             --border-radius: 12px;
             --border-radius-lg: 16px;
-            --transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+            --transition: 全部 0.3s cubic-bezier(0.4, 0, 0.2, 1);
         }
 
         * {
@@ -414,7 +414,7 @@
                     <img src="https://cdn.jsdelivr.net/gh/dqzboy/Images/dqzboy-proxy/racknerd.png" alt="RackNerd">
                     <div class="provider-info">
                         <h2 class="provider-name">RackNerd</h2>
-                        <p class="provider-description">RackNerd 是一家多元化的全球基础设施即服务解决方案提供商，提供高性能、可靠的云服务解决方案。</p>
+                        <p class="provider-description">多元化的全球基础设施即服务解决方案提供商，提供高性能、可靠的云服务解决方案。</p>
                         <div class="provider-tags">
                             <span class="tag">性价比</span>
                             <span class="tag">多元化</span>
@@ -430,7 +430,7 @@
                     <img src="https://cdn.jsdelivr.net/gh/dqzboy/Images/dqzboy-proxy/CloudCone.png" alt="推广平台">
                     <div class="provider-info">
                         <h2 class="provider-name">CloudCone</h2>
-                        <p class="provider-description">CloudCone 是一家以灵活计费、低价、稳定等特点受到用户欢迎的VPS服务商。﻿。</p>
+                        <p class="provider-description">CloudCone 是一家以灵活计费、低价、稳定等特点受到用户欢迎的VPS服务商。﻿</p>
                         <div class="provider-tags">
                             <span class="tag">CN2线路</span>
                             <span class="tag">性价比</span>
