--- a/racknerd.html
+++ b/racknerd.html
@@ -19,7 +19,7 @@
             background-color: #f5f5f5;
         }
         
-        .container {
+        。container {
             max-width: 1200px;
             margin: 0 auto;
             padding: 0 20px;
@@ -652,7 +652,7 @@
                                         </td>
                                         <td>${plan.ram}GB</td>
                                         <td>${plan.storage}GB</td>
-                                        <td>${plan.bandwidth}TB</td>
+                                        <td>${plan.bandwidth}TB/月</td>
                                         <td class="price">$${plan.price}</td>
                                         <td>
                                             <a href="${generatePurchaseLink(plan.pid)}" class="action-btn" target="_blank">
