--- a/surge_module.html
+++ b/surge_module.html
@@ -1730,7 +1730,7 @@
             "七猫小说去广告", "下厨房去广告", "中华万年历去广告", "中国人保去广告", "中国移动云盘去广告",
             "丰巢去广告", "乐播投屏去广告", "书旗小说去广告", "京东去广告", "京东比价",
             "什么值得买去广告", "代理链路检测", "优酷视频去广告", "健康160去广告", "全民K歌去广告",
-            "前程无忧去广告", "剑网三无界去广告", "叮咚买菜去广告", "可莉广告过滤器", "向日葵去广告",
+            "前程无忧去广告", "剑网三无界去广告", "叮咚买菜去广告", "向日葵去广告",
             "启信宝去广告", "哔哩哔哩去广告", "哔哩哔哩漫画去广告", "喜马拉雅去广告", "堆糖去广告",
             "墨迹天气去广告", "夸克去广告", "威锋去广告", "宝宝树孕育去广告", "小喵看书去广告",
             "小宇宙去广告", "小店掌柜去广告", "小米音箱去广告", "小红书去广告", "小蚕霸王餐去广告",
