--- a/racknerd.html
+++ b/racknerd.html
@@ -1012,6 +1012,16 @@
     <script>
         // VPS 促销数据
         const promotionData = {
+            'promo_double11_2025': {
+                title: '2025 年 RackNerd 双十一 VPS 促销活动来袭，2G 以上配置均可选择 DC02 机房',
+                badge: '🛒 双十一特惠',
+                plans: [
+                    { cpu: '1', ram: '1', storage: '20', bandwidth: '3', price: '10.76', pid: '917', dc02: false, dc03: false },
+                    { cpu: '2', ram: '2', storage: '35', bandwidth: '5', price: '17.66', pid: '918', dc02: true, dc03: false },
+                    { cpu: '3', ram: '3', storage: '55', bandwidth: '6', price: '26.99', pid: '919', dc02: true, dc03: false },
+                    { cpu: '4', ram: '4', storage: '80', bandwidth: '8', price: '39.99', pid: '920', dc02: true, dc03: false }
+                ]
+            },
             'promo_june_2025': {
                 title: '2025年最新促销优惠活动',
                 badge: '🎉 最新特惠',
